<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CloudApp</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="anmelden">Login</string>
    <string name="passwort"></string>
    <string name="email">E-Mail:</string>
    <string name="login_info"></string>
    <string name="aktVerb">Sensor/Aktorverbünde</string>
    <string name="nutzerStmmdtn">Nutzerdaten</string>
    <string name="event">Events anzeigen</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="insert">Insert</string>
    <string name="auswahl_daten">Welches wollen sie anzeigen?</string>
    <string name="gruppe">Gruppe</string>
    <string name="land">Land:</string>
    <string name="chart">Charts anzeigen</string>
    <string name="close">Schließen</string>
    <string name="save">Speichern</string>
    <string name="showEveContent">Zeige Dialog</string>
    <string name="service">Servicelinie</string>
    <string name="datepicker">Datum :</string>
    <string name="drawChart">Chart zeichnen</string>
    <string name="title_activity_auswahlseite">Hauptmenü</string>
    <string name="title_activity_nutzerStammdaten">NutzerStammdaten</string>
    <string name="title_activity_telefon">Telefon</string>
    <string name="title_activity_email">Email</string>
    <string name="title_activity_adresse">Adresse</string>
    <string name="title_activity_stammdaten">Stammdaten</string>
    <string name="title_activity_sicherheit">Sicherheit</string>
    <string name="title_activity_sensorverbund">Sensorverbund</string>
    <string name="title_activity_aktorverbund">Aktorverbund</string>
    <string name="title_activity_event_regel">EventRegel</string>
    <string name="title_activity_chart">Diagramm erstellen</string>
    <string name="title_activity_show_chart">ShowChart</string>
    <string name="title_activity_gruppen">GruppenActivity</string>
    <string name="title_activity_gruppe_erstellen">Gruppe erstellen</string>
    <string name="title_activity_gruppen_mit_einladen">Gruppen Mitglied einladen</string>
    <string name="ort">Ort:</string>
    <string name="plz">PLZ:</string>
    <string name="strasse">Straße:</string>
    <string name="bezeichnung">Bezeichnung:</string>
    <string name="zuNutzerstammdaten">Zu den Nutzerstammdaten:</string>
    <string name="zuSensorenAktoren">Zu den Sensoren und Aktoren:</string>
    <string name="zuGruppen">Zu den Gruppen:</string>
    <string name="listtelefonNr">Liste der Telefonnummern:</string>
    <string name="telefon">Telefon:</string>
    <string name="anrede">Anrede:</string>
    <string name="name">Name:</string>
    <string name="vorname">Vorname:</string>
    <string name="firma">Firma:</string>
    <string name="erstellungsDatum">Erstellungsdatum:</string>
    <string name="listPassword">Liste von Passwörtern:</string>
    <string name="password">Passwort:</string>
    <string name="pubKey">Public Key:</string>
    <string name="priKey">Private Key;</string>
    <string name="listEmail">Liste von E-Mail-Adressen:</string>
    <string name="listSenVerbund">Liste aller meiner Sensorverbünde:</string>
    <string name="listSensor">Liste von Sensoren:</string>
    <string name="senPosition">Position des Sensoren:</string>
    <string name="raum">Raum:</string>
    <string name="aktPostion">Position des Aktoren:</string>
    <string name="listAktoren">Liste von Aktoren:</string>
    <string name="listAktVerbund">Liste aller meiner Aktorverbünde:</string>
    <string name="listGruppen">Liste meiner Gruppen:</string>
    <string name="listMitglied">Liste der Mitglieder:</string>
    <string name="nameMitglied">Name des Mitgliedes:</string>
    <string name="emailMitglied">E-Mail des Mitgliedes: </string>
    <string name="gruppeVerlassen">Gruppe verlassen:</string>
    <string name="title_activity_nutzer_anlegen">Registrieren</string>
    <string name="title_activity_aktor_verbund_anlegen">Aktor zum Verbund einfügen</string>
    <string name="title_activity_sensor_verbund_anlegen">Sensor zum Verbund einfügen</string>
    <string name="title_activity_service_linie">Servicelinie</string>
    <string name="title_activity_service_linien_anzeigen">Servicelinien anzeigen</string>
    <string name="title_activity_service_linien_akt_anlegen">Aktoren Servicelinie anlegen</string>

</resources>
