<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="#000000"
    android:orientation="vertical" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/listPassword"
        android:textColor="#2ECCFA"
        android:textSize="15sp" >
    </TextView>

    <Spinner
        android:id="@+id/spinnerSicherheit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/password"
        android:textColor="#2ECCFA"
        android:textSize="15sp" >
    </TextView>

    <EditText
        android:id="@+id/sicherheit_pas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:inputType="text" >
    </EditText>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/pubKey"
        android:textColor="#2ECCFA"
        android:textSize="15sp" >
    </TextView>

    <EditText
        android:id="@+id/sicherheit_pubKey"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:inputType="text" >
    </EditText>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/priKey"
        android:textColor="#2ECCFA"
        android:textSize="15sp" >
    </TextView>

    <EditText
        android:id="@+id/sicherheit_priKey"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:inputType="text" >
    </EditText>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/sic_update"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="updateSicherheit"
            android:text="@string/update"
            android:textColor="#2ECCFA" />

        <Button
            android:id="@+id/sic_insert"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="insertSic"
            android:text="@string/insert"
            android:textColor="#2ECCFA" />

        <Button
            android:id="@+id/sic_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="deleteSic"
            android:text="@string/delete"
            android:textColor="#2ECCFA" />
    </LinearLayout>

</LinearLayout>