<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="#000000"
    android:orientation="vertical" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/listAktVerbund"
        android:textColor="#2ECCFA"
        android:textSize="15sp" >
    </TextView>

    <Spinner
        android:id="@+id/spinnerAktVerbBez"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/listAktoren"
        android:textColor="#2ECCFA"
        android:textSize="15sp" >
    </TextView>

    <Spinner
        android:id="@+id/spinnerAktVerbAktoren"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:text="@string/bezeichnung"
        android:textColor="#2ECCFA"
        android:textSize="15sp" >
    </TextView>

    <EditText
        android:id="@+id/aktBezeichnung"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:inputType="text" >
    </EditText>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/aktPostion"
        android:textColor="#2ECCFA"
        android:textSize="15sp" >
    </TextView>

    <EditText
        android:id="@+id/aktPosition"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:inputType="text" >
    </EditText>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/raum"
        android:textColor="#2ECCFA"
        android:textSize="15sp" >
    </TextView>

    <EditText
        android:id="@+id/aktRaum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:inputType="text" >
    </EditText>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/erstellungsDatum"
        android:textColor="#2ECCFA"
        android:textSize="15sp" >
    </TextView>

    <EditText
        android:id="@+id/aktDatum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:inputType="text" >
    </EditText>

</LinearLayout>