<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="#000000"
    android:orientation="vertical" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/listGruppen"
        android:textColor="#2ECCFA"
        android:textSize="15sp" >
    </TextView>

    <Spinner
        android:id="@+id/spinnerGruppe"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/listMitglied"
        android:textColor="#2ECCFA"
        android:textSize="15sp" >
    </TextView>

    <Spinner
        android:id="@+id/spinnerGruppenMitglied"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/nameMitglied"
        android:textColor="#2ECCFA"
        android:textSize="15sp" >
    </TextView>

    <EditText
        android:id="@+id/grp_mitg_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:inputType="text" >
    </EditText>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/emailMitglied"
        android:textColor="#2ECCFA"
        android:textSize="15sp" >
    </TextView>

    <Spinner
        android:id="@+id/spinnerGrpMitgldEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/grp_verlassen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:onClick="verlasseGruppe"
        android:text="Gruppe verlassen"
        android:textColor="#2ECCFA" />

</LinearLayout>